trying to fix font on iphone

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
 
 body {
   text-align: center;
-  font-family: Fantasy;
+  font-family: Papyrus;
   font-size: 14px;
   color: #1d0029
 }
